--- a/src/assets/css/ConfessionList.css
+++ b/src/assets/css/ConfessionList.css
@@ -24,7 +24,7 @@
  
 }
 
-.card-content {
+.confessed-note {
   font-size: 10px;
   line-height: 1.6; /* Increased line height for better readability */
   color: #333;
