--- a/src/assets/css/ConfessionList.css
+++ b/src/assets/css/ConfessionList.css
@@ -40,6 +40,10 @@
   text-align: justify;
 }
 
+.confession-note::-webkit-scrollbar {
+  width: 3px; /* Makes the bar very thin and clean */
+}
+
 .time-ago {
   position: absolute;
   bottom: 5px;
