--- a/src/assets/css/ConfessionList.css
+++ b/src/assets/css/ConfessionList.css
@@ -40,9 +40,10 @@
   text-align: justify;
 }
 
-.confession-note::-webkit-scrollbar {
+.confessed-note::-webkit-scrollbar {
   width: 3px;
-  margin-left: 10px;/* Makes the bar very thin and clean */
+  margin-left: 10px;
+  color: grey;/* Makes the bar very thin and clean */
 }
 
 .time-ago {
